# cdsFM

./: ft_encodon.py  probe_encodon.py  pyproject.toml  testing.ipynb
cdsfm/decodon/: _auto.py  modeling_decodon.py
cdsfm/encodon/: _auto.py  modeling_encodon.py
