[project]
name = "cdsFM"
version = "0.1.0"
description = "cdsFM"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=3.1.0",
    "nltk>=3.9.1",
    "numpy>=1.24",
    "pytorch-lightning>=2.4.0",
    "torch>=2",
    "transformers>=4",
    "biopython>=1.7",
    "scanpy",
]

[tool.setuptools]
packages = ["cdsfm"]
